--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -60,6 +60,7 @@
     <table class="table">
         <thead>
         <tr>
+            <!-- Change table title -->
             <!-- <th class="ReviewID">#</th> -->
             <th class="Username">Username</th>
             <th class="Rating">Rating</th>
@@ -67,7 +68,7 @@
             <th class="Is Recommended">Is Recommended</th>
             <th class="Requires Textbook">Requires Textbook</th>
             <th class="Course">Course</th>
-            <th class="InstructorNetID">InstructorNetID</th>
+            <th class="Instructor">Instructor</th>
 
             <th class="update">Edit</th>
             <th class="remove">Remove</th>
@@ -77,6 +78,7 @@
         <tbody>
         {% for review in reviews %}
             <tr>
+                <!-- Change what is displayed -->
                 <!-- <td>{{review.ReviewID}}</td> -->
                 <td>{{review.Username}}</td>
                 <td>{{review.Rating}}</td>
@@ -84,7 +86,7 @@
                 <td>{{review.IsRecommended}}</td>
                 <td>{{review.RequiresTextbook}}</td>
                 <td>{{courses[review.CRN].Course}}</td>
-                <td>{{review.InstructorNetID}}</td>
+                <td>{{instructors[review.InstructorNetID].Name}}</td>
                 
 
                 <!-- {% if review.status == "In Progress" %}
@@ -105,7 +107,7 @@
                     data-content="{{review.IsRecommended}}"
                     data-content="{{review.RequiresTextbook}}"
                     data-content="{{courses[review.CRN].Course}}"
-                    data-content="{{review.InstructorNetID}}"
+                    data-content="{{instructors[review.InstructorNetID].Name}}"
 
                 ><i class="fa fa-pen fa-1" aria-hidden="true"></i></button></td>
 
