--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,13 +36,15 @@
         
         <!-- Button trigger modal -->
         <div style="text-align: right;">
-        <button type="button" class="btn btn-outline-info btn-sm" data-bs-toggle="modal" data-bs-target="#task-modal" data-source="New Review">Add Review</button>
+          <button type="button" class="btn btn-outline-info btn-sm" data-bs-toggle="modal" data-bs-target="#task-modal" data-source="New Review">Add Review</button>
+           <a href = "http://127.0.0.1:5000/avg_ratings"  class="btn btn-outline-info btn-sm">Average Ratings</a>
+           <a href = "http://127.0.0.1:5000/highest_ratings"  class="btn btn-outline-info btn-sm">Highest Ratings</a>
         </div>
         
-        <div style="text-align: right;">
+        <!-- <div style="text-align: right;">
             <a href = "http://127.0.0.1:5000/avg_ratings"  class="btn btn-outline-info btn-sm">Average Ratings</a>
         </div>
-        
+         -->
 
 
         <div class="modal fade" id="task-modal" tabindex="-1" aria-labelledby="Label" aria-hidden="true">
