--- a/app/templates/highest_ratings.html
+++ b/app/templates/highest_ratings.html
@@ -43,7 +43,7 @@
         </div>
         </div>
 
-    </div> -->
+    </div>
 
     <div style="text-align:center;">
         <a href = "http://127.0.0.1:5000/"  class="btn btn-outline-info btn-sm">Home</a>
