--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,10 +28,15 @@
             <button>Search</button>
         </form>
     </div>
-    <body style ="text-align: center">
-        {{name}}
-    </body>
-    
+
+    <div style ="text-align: center">
+    {% if keyword: %}
+        <h4>Current Keyword: {{keyword}}</h4>
+    {% else: %}
+        <h4>No Keyword</h4>
+    {% endif %}
+    </div>
+
 
     <div class="container">    
         
