--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,6 +6,10 @@
 		<link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+		
+		<link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
+		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.js"></script>
 	</head>
 	<body class="loggedin">
 		<nav class="navtop">
@@ -19,7 +23,7 @@
 			</div>
 		</nav>
 
-		<form id="form">
+		<form id="form" autocomplete="off">
 		<div class="modal fade" id="review" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
@@ -34,6 +38,7 @@
 						<div class="form-group">
 							<label for="instructor" class="col-form-label">Instructor Name:</label>
 							<input type="text" id="instructor" class="form-control" placeholder="Instructor Name" required="true">
+							
 						</div>
 						<div class="form-group">
 							<label for="rating" class="col-form-label">Rating (1-5):</label>
@@ -66,10 +71,12 @@
 		<!-- Searchbox  -->
         <h2 style="text-align: center;">Search Anything</h2>
 
+		<a href = "http://127.0.0.1:5000/avg_ratings"  class="btn btn-outline-info btn-sm">Average Ratings</a>
+		<a href = "http://127.0.0.1:5000/highest_ratings"  class="btn btn-outline-info btn-sm">Highest Ratings</a>
 	
 		<div style ="text-align: center">
 			<form id="form"> 
-				<input type="search" id="query" name="q" placeholder="Search..." method="GET">
+				<input type="search" id="query" name="q" placeholder="Search..." method="GET" autocomplete="off">
 				<button>Search</button>
 			</form>
 		</div>
@@ -119,10 +126,24 @@
         </div>
 	</body>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="{{ url_for('static', filename='script/modal.js') }}"></script>
 
+	<script>
+		$(function() {
+			$.ajax({
+				url: '{{ url_for("autocomplete") }}'
+				}).done(function (data){
+					$('#query').autocomplete({
+						source: data,
+						minLength: 1
+					});
+				});
+			});
+	</script>
+
 </html>
+
