--- a/app/templates/visualization.html
+++ b/app/templates/visualization.html
@@ -6,6 +6,10 @@
 		<link rel="stylesheet" href="{{ url_for('static', filename='styles/style.css') }}">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/smoothness/jquery-ui.css">
+		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.js"></script>
 	</head>
 	<body class="loggedin">
 		<nav class="navtop">
@@ -66,8 +70,8 @@
         <h2 style="text-align: center;">Enter a course</h2>
 
 		<div style ="text-align: center">
-			<form id="form"> 
-				<input type="search" id="query" name="q" placeholder="Search..." method="GET">
+			<form id="form">
+				<input type="search" id="query" name="q" placeholder="Search..." method="GET" autocomplete="off">
 				<button>Search</button>
 			</form>
 		</div>
@@ -113,12 +117,24 @@
         <img src="{{img}}" class="center">
 	</body>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="{{ url_for('static', filename='script/modal.js') }}"></script>
 
+    <script>
+        $(function() {
+            $.ajax({
+                url: '{{ url_for("autocomplete_courses") }}'
+                }).done(function (data){
+                    $('#query').autocomplete({
+                        source: data,
+                    });
+                });
+            });
+    </script>
+
 </html>
 
-</body>
+
