--- a/app/templates/visualization.html
+++ b/app/templates/visualization.html
@@ -84,6 +84,11 @@
 		{% endif %}
 		</div>
 
+        <div style ="text-align: center">
+            <h4>Instructor with Highest Average Rating: {{ratings[0].instructor}} | {{ratings[0].avgRating}}</h4>
+        </div>
+        
+
 		<!-- Reviews -->
 	  	<div class="container table-responsive">          
 			<table class="table">
@@ -115,7 +120,6 @@
         </div>
 
         <img src="{{img}}" class="center">
-	</body>
 
 	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
